# volumentations

./: .deepsource.toml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  black.toml  mypy.ini  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  how-to-question.md
.github/workflows/: coverage.yml  rebase.yml  release.yml  test-pypi.yml  tests.yml
docs/: Makefile  conf.py  contributing.rst  examples.rst  index.rst  make.bat  requirements.txt
docs/_templates/: layout.html
docs/api/: augmentations.rst  core.rst  index.rst
src/volumentations/: __init__.py
src/volumentations/augmentations/: functional.py  transforms.py
src/volumentations/core/: composition.py  serialization.py  six.py  transforms_interface.py  utils.py
tests/: conftest.py  test_augmentations.py  test_core.py  test_functionals.py  test_serialization.py  test_transforms.py  utils.py
