[tool.poetry]
name = "volumentations"
version = "0.1.8"
description="Point augmentations library as hard-fork of albu-team/albumentations"
homepage="https://github.com/kumuji/volumentations"
repository="https://github.com/kumuji/volumentations"
documentation = "https://volumentations.readthedocs.io/en/latest/"
authors = ["kumuji <alexey@nekrasov.dev>"]
license = "MIT"
readme="README.md"
classifiers=[
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

[tool.poetry.dependencies]
python = "^3.6.1"
pyyaml = "^5.3.1"
numpy = "^1.18.3"
importlib-metadata = ">=1.6,<5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.1"
flake8-docstrings = "^1.6.0"
flake8-isort = "^3.0.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.2"
flake8-bugbear = "^21.3.1"
mypy = "^0.812"
pre-commit = "^2.12.1"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
nox = "^2020.5.24"
pytest-mock = "^3.6.0"
safety = "^1.10.3"
darglint = "^1.7.0"
xdoctest = "^0.15.4"
sphinx = "<5.0"
sphinx-autodoc-typehints = "^1.10.3"
sphinx_rtd_theme = "^0.5.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
# poetry run pytest --cov
branch = true
source = ["volumentations"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
