[tool.poetry]
name = "volumentations"
version = "0.2.0"
description="Point augmentations library as hard-fork of albu-team/albumentations"
homepage="https://github.com/kumuji/volumentations"
repository="https://github.com/kumuji/volumentations"
documentation = "https://volumentations.readthedocs.io/en/latest/"
authors = ["kumuji <alexey@nekrasov.dev>"]
license = "MIT"
readme="README.md"
classifiers=[
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

[tool.poetry.dependencies]
python = "^3.10.9"
pyyaml = "^6.0.2"
numpy = "^2.2.1"
importlib-metadata = "8.5.0"
packaging = "^24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.12.12"
mypy = "^1.14.1"
pre-commit = "^4.0.1"
coverage = {extras = ["toml"], version = "^7.6.10"}
pytest-cov = "^6.0.0"
nox = "^2024.10.9"
pytest-mock = "^3.14.0"
safety = "^3.2.14"
darglint = "^1.8.1"
xdoctest = "^1.2.0"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^3.0.0"
sphinx_rtd_theme = "^3.0.2"
types-pyyaml = "^6.0.12"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
# poetry run pytest --cov
branch = true
source = ["volumentations"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[build-system]
requires = ["poetry<2.0.0"]
build-backend = "poetry.masonry.api"
